# BevyJam2022-2

./: .gitignore  Cargo.toml  README.md  clippy.toml  deny.toml
.cargo/: config.toml
.github/workflows/: release.yaml
assets/models/: Elevator Export.gltf  Level 1 Parking Garage Export.gltf  Level 2 Lobby Export.gltf  Level 2 Lobby Props.gltf  Level 2 Lobby.gltf  Level 3 Chair Export.gltf  Level 4 Chairs Pile Export.gltf  Level 5 Parking Garage Lobby Export.gltf  Lobby Sky.glb  map.gltf  test_area.gltf
assets/shaders/: general_mat.wgsl  post_process.wgsl  rings.wgsl
assets/sounds/: bad_click.flac  chairs.flac  click.flac  door_open.flac  door_open2.flac  drone1.flac  elevator_transport.flac  ending.flac  gate.flac  keys_pickup.flac  lobby_in_garage.flac  phone_background.flac  phone_call.flac  phone_hangup.flac  phone_key_press.flac  phone_number_not_available.flac  phone_pickup.flac  rings.flac
bevy_fps_controller/examples/: minimal.rs
bevy_fps_controller/src/: controller.rs
src/: assets.rs  audio.rs  editor.rs  entity.rs  interact.rs  inventory.rs  levels.rs  macros.rs  main.rs  materials.rs  menu.rs  notification.rs  overlap.rs  scene_hook.rs  sidecar_asset.rs
src/entity/: block.rs  button.rs  collider.rs  door_linear.rs  phone.rs  teleport.rs  teleport_destination.rs  teleporter.rs  trigger.rs
src/levels/: elevator.rs  elevator_level.rs  level1_garage.rs  level2_lobby.rs  level3_chair.rs  level4_chairs_pile.rs  level5_garage_lobby.rs  map.rs  mod.rs  test_area.rs
src/materials/: general.rs  general_mat.wgsl  post_process.rs  rings.rs
tools/: convert_assets.py  export_vertex_colors.py  import_vertex_colors.py  process_export_direct.py
wasm/: index.html
