[package]
name = "bevy_jam_2022_2"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.8", features = [
  "jpeg",
  "ktx2",
  "zstd",
  "flac",
  "vorbis",
] }
bevy_asset_loader = { version = "0.12", features = ["stageless"] }
bevy_editor_pls = { git = "https://github.com/DGriffin91/bevy_editor_pls", branch = "remove_picking" }
bevy_editor_pls_default_windows = { git = "https://github.com/DGriffin91/bevy_editor_pls", branch = "remove_picking" }
bevy_egui = "0.15"
bevy_fps_controller = { path = "./bevy_fps_controller" }
bevy_kira_audio = { version = "0.12", features = ["mp3"] }
bevy_rapier3d = "0.16"
futures-intrusive = "0.4"
image = { version = "0.24", default-features = false }
interpolation = "0.2"
iyes_loopless = "0.7"
paste = "1.0"
pollster = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
bevy = { version = "0.8", features = ["dynamic"] }

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
