[package]
name = "bevy_jam_2022_2"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.8", features = ["jpeg", "ktx2", "mp3", "png", "zstd"] }
bevy_asset_loader = { version = "0.12", features = ["2d", "stageless"] }
bevy_fps_controller = { path = "./bevy_fps_controller" }
bevy_kira_audio = { version = "0.12", features = ["mp3"] }
bevy_rapier3d = "0.16"
futures-intrusive = "0.4"
interpolation = "0.2"
iyes_loopless = "0.7"
paste = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
bevy = { version = "0.8", features = ["dynamic"] }

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
